--- a/Jet-Racer/JSON/level_config.json
+++ b/Jet-Racer/JSON/level_config.json
@@ -7,13 +7,77 @@
       "objects": [
          {
             "objectID": "HealthPack",
-            "spawnRate": 0.05,
+            "spawnRate": 0.025,
             "startTime": 10.0,
             "endTime": 25.0
          },
          {
             "objectID": "Phase",
-            "spawnRate": 0.05,
+            "spawnRate": 0.025,
+            "startTime": 2.5,
+            "endTime": 27.5
+         },
+         {
+            "objectID": "MovingSquare",
+            "spawnRate": 0.10,
+            "startTime": 0.0,
+            "endTime": 30.0
+         },
+         {
+            "objectID": "Missile",
+            "spawnRate": 0.15,
+            "startTime": 5.0,
+            "endTime": 30.0
+         }
+      ]
+   },
+   {
+      "levelID": 2,
+      "baseSpeed": 2.5,
+      "timeLimit": 30.0,
+      "spawnFrequency": 6.0,
+      "objects": [
+         {
+            "objectID": "HealthPack",
+            "spawnRate": 0.03,
+            "startTime": 10.0,
+            "endTime": 25.0
+         },
+         {
+            "objectID": "Phase",
+            "spawnRate": 0.03,
+            "startTime": 2.5,
+            "endTime": 27.5
+         },
+         {
+            "objectID": "MovingSquare",
+            "spawnRate": 0.125,
+            "startTime": 0.0,
+            "endTime": 30.0
+         },
+         {
+            "objectID": "Missile",
+            "spawnRate": 0.175,
+            "startTime": 5.0,
+            "endTime": 30.0
+         }
+      ]
+   },
+   {
+      "levelID": 3,
+      "baseSpeed": 2.5,
+      "timeLimit": 30.0,
+      "spawnFrequency": 7.0,
+      "objects": [
+         {
+            "objectID": "HealthPack",
+            "spawnRate": 0.045,
+            "startTime": 10.0,
+            "endTime": 25.0
+         },
+         {
+            "objectID": "Phase",
+            "spawnRate": 0.045,
             "startTime": 2.5,
             "endTime": 27.5
          },
@@ -25,29 +89,41 @@
          },
          {
             "objectID": "Missile",
-            "spawnRate": 0.25,
+            "spawnRate": 0.2,
             "startTime": 5.0,
             "endTime": 30.0
          }
       ]
    },
    {
-      "levelID": 2,
-      "baseSpeed": 3.5,
-      "timeLimit": 60.0,
-      "spawnFrequency": 10.0,
+      "levelID": 4,
+      "baseSpeed": 2.5,
+      "timeLimit": 30.0,
+      "spawnFrequency": 8.0,
       "objects": [
          {
             "objectID": "HealthPack",
-            "spawnRate": 0.1,
+            "spawnRate": 0.045,
+            "startTime": 10.0,
+            "endTime": 25.0
+         },
+         {
+            "objectID": "Phase",
+            "spawnRate": 0.045,
+            "startTime": 2.5,
+            "endTime": 27.5
+         },
+         {
+            "objectID": "MovingSquare",
+            "spawnRate": 0.25,
             "startTime": 0.0,
             "endTime": 30.0
          },
          {
-            "objectID": "MovingSquare",
-            "spawnRate": 0.5,
-            "startTime": 15.0,
-            "endTime": 60.0
+            "objectID": "Missile",
+            "spawnRate": 0.35,
+            "startTime": 5.0,
+            "endTime": 30.0
          }
       ]
    }
